--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html --out-dir public",
+    "start": "parcel src/index.njk --out-dir public",
+    "build": "parcel build src/index.njk --out-dir public",
     "serve": "serve public",
     "deploy": "now",
+    "clean": "rimraf dist .cache public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,13 +22,14 @@
   },
   "homepage": "https://github.com/albertmolodec/vanilla-auth-form#readme",
   "devDependencies": {
+    "autoprefixer": "^9.7.3",
     "now": "^16.6.0",
+    "npm-run-all": "^4.1.5",
+    "nunjucks": "^3.2.0",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-nunjucks": "^2.2.0",
+    "postcss-nested": "^4.2.1",
     "serve": "^11.2.0"
   },
-  "dependencies": {
-    "autoprefixer": "^9.7.3",
-    "postcss-modules": "^1.4.1",
-    "postcss-nested": "^4.2.1"
-  }
+  "dependencies": {}
 }
