--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/pages/index.njk",
-    "build": "parcel build src/pages/*.njk --out-dir public",
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html --out-dir public",
     "serve": "serve public",
     "deploy": "now",
-    "clean": "rimraf dist .cache public",
+    "clean": "rimraf dist .cache .parcel-cache public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,11 +25,11 @@
     "autoprefixer": "^9.7.3",
     "now": "^16.6.0",
     "npm-run-all": "^4.1.5",
-    "nunjucks": "^3.2.0",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-nunjucks": "^2.2.0",
     "postcss-nested": "^4.2.1",
     "serve": "^11.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "fonts.css": "^2.0.0"
+  }
 }
