--- a/package.json
+++ b/package.json
@@ -22,14 +22,10 @@
   },
   "homepage": "https://github.com/albertmolodec/vanilla-auth-form#readme",
   "devDependencies": {
-    "autoprefixer": "^9.7.3",
     "now": "^16.6.0",
-    "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "postcss-nested": "^4.2.1",
     "serve": "^11.2.0"
   },
-  "dependencies": {
-    "fonts.css": "^2.0.0"
-  }
+  "dependencies": {}
 }
