--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "devDependencies": {
     "now": "^16.6.0",
     "parcel-bundler": "^1.12.4",
-    "postcss-nested": "^4.2.1",
     "serve": "^11.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "postcss-nested": "^4.2.1",
+    "postcss-preset-env": "^6.7.0"
+  }
 }
