Improve buttons, install postcss-mixins

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "serve": "^11.2.0"
   },
   "dependencies": {
+    "postcss-mixins": "^6.2.3",
     "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0"
   }
